# Murmur

./: .gitignore  README.md  build-gnu.bat  build-msvc.bat  build-ps.ps1  build-release.bat  build.bat  dev.bat  package-lock.json  package.json  run-build.bat
.github/workflows/: release.yml
scripts/: generate-ico.mjs  generate-icons.mjs
src/: App.tsx  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  state.rs
src-tauri/src/api/: anthropic.rs  deepgram.rs  groq.rs  mod.rs  openai.rs
src-tauri/src/audio/: capture.rs  devices.rs  mod.rs
src-tauri/src/commands/: audio.rs  mod.rs  models.rs  overlay.rs  paste.rs  recording.rs  settings.rs  transcription.rs
src-tauri/src/hotkey/: manager.rs  mod.rs
src-tauri/src/llm/: llama.rs  mod.rs  prompts.rs
src-tauri/src/models/: downloader.rs  mod.rs
src-tauri/src/paste/: clipboard.rs  mod.rs  typing.rs
src-tauri/src/storage/: database.rs  history.rs  mod.rs  settings.rs
src-tauri/src/stt/: mod.rs  whisper.rs
src-tauri/src/tray/: menu.rs  mod.rs
src/components/history/: HistoryPanel.tsx
src/components/overlay/: Overlay.tsx  OverlayWindow.tsx  WaveformBars.tsx  WaveformCircle.tsx  WaveformLine.tsx
src/components/settings/: AISettings.tsx  AboutPanel.tsx  AudioSettings.tsx  GeneralSettings.tsx  SettingsPanel.tsx  index.ts
src/components/wizard/: SetupWizard.tsx
src/lib/: tauri.ts
src/stores/: recordingStore.ts  settingsStore.ts
src/styles/: globals.css
